# autobot

./: README.md
.devcontainer/: Dockerfile  devcontainer.json  entrypoint.sh
bot/: CMakeLists.txt  README.md  carlikebot.xml  package.xml
bot/arduino_control/: arduino_control.ino
bot/arduino_control/new_arduino_control/: new_arduino_control.ino
bot/bringup/config/: carlikebot_controllers.yaml
bot/bringup/launch/: carlikebot.launch.py  launch_sim.launch.py  ps4_twist_bridge.py  twist_bridge.launch.py
bot/description/launch/: view_robot.launch.py
bot/description/ros2_control/: carlikebot.ros2_control.xacro
bot/description/urdf/: carlikebot.urdf.xacro
bot/doc/: userdoc.rst
bot/hardware/: arduino_comms.cpp  carlikebot_system.cpp
bot/hardware/include/carlikebot/: arduino_comms.hpp  carlikebot_system.hpp
bot/scripts/: ps4_twist_bridge.py
bot/test/: test_carlikebot_launch.py  test_serial.py  test_urdf_xacro.py  test_view_robot_launch.py
demos/: package.xml
install/: local_setup.sh  setup.sh
install/carlikebot/include/carlikebot/carlikebot/: carlikebot_system.hpp
install/carlikebot/share/carlikebot/: carlikebot.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/carlikebot/share/carlikebot/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_targets-extras.cmake  carlikebotConfig-version.cmake  carlikebotConfig.cmake
install/carlikebot/share/carlikebot/config/: carlikebot_controllers.yaml
install/carlikebot/share/carlikebot/environment/: library_path.dsv  (+2 more)
install/ros2_control_demo_description/share/ros2_control_demo_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/ros2_control_demos/share/ros2_control_demos/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build
ros2_control_demo_description/: CMakeLists.txt
(+23 files in other folders)
